--- a/style.css
+++ b/style.css
@@ -5,5 +5,32 @@
 }
 
 body {
-  background-color: purple;
+  font-family: "Open Sans", sans-serif;
+  background-image: url(/bono-landing-page/images/background.jpg);
+}
+
+.container {
+  max-width: 1850px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.header-container {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.image-itself {
+  width: 100px;
+}
+
+.list {
+  display: flex;
+}
+
+.list-items {
+  margin-left: 1rem;
+  list-style: none;
 }
