--- a/style.css
+++ b/style.css
@@ -34,3 +34,18 @@ body {
   margin-left: 1rem;
   list-style: none;
 }
+
+main {
+  color: white;
+}
+
+.main-container {
+  max-width: 800px;
+  width: 100%;
+  margin: 13rem auto;
+  justify-content: space-between;
+}
+
+.content-container {
+  display: flex;
+}
