--- a/style.css
+++ b/style.css
@@ -6,7 +6,12 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background-image: url(/bono-landing-page/images/background.jpg);
+  background:
+    linear-gradient(to bottom, rgba(255, 64, 50, 0.8), rgba(71, 17, 116, 0.9)),
+    url(/bono-landing-page/images/background.jpg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  background-position: center;
 }
 
 .container {
