--- a/style.css
+++ b/style.css
@@ -44,14 +44,23 @@ main {
   color: white;
 }
 
+.input-content-container {
+  flex: 2;
+}
+
+.input-content-container form {
+  margin-left: 200px;
+}
+
 .main-container {
   max-width: 1200px;
-  width: 100%;
+  width: 50%;
   margin: 13rem auto;
 }
 
 .main-text {
-  width: 300px;
+  flex: 1;
+  width: auto;
 }
 
 .main-header {
@@ -66,8 +75,35 @@ main {
 
 .content-container {
   display: flex;
-  justify-content: space-between;
-  width: 50%;
+  gap: 40px;
+  width: 100%;
   align-items: center;
   margin: 0 auto;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.form-group input {
+  width: 80%;
+  padding: 6px 0;
+  border-radius: 8px;
+  border: none;
+  opacity: 30%;
+}
+
+textarea {
+  width: 80%;
+  height: 75px;
+  border-radius: 8px;
+  border: none;
+  opacity: 30%;
 }
