--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ main {
 }
 
 .input-content-container form {
-  margin-left: 200px;
+  margin-left: 100px;
 }
 
 .main-container {
@@ -61,10 +61,14 @@ main {
 .main-text {
   flex: 1;
   width: auto;
+  margin-top: -80px;
+  margin-right: 10rem;
 }
 
 .main-header {
   line-height: 40px;
+  font-size: 35px;
+  width: 300px;
 }
 
 .main-text-description {
@@ -75,7 +79,6 @@ main {
 
 .content-container {
   display: flex;
-  gap: 40px;
   width: 100%;
   align-items: center;
   margin: 0 auto;
@@ -93,7 +96,7 @@ main {
 }
 
 .form-group input {
-  width: 80%;
+  width: 90%;
   padding: 6px 0;
   border-radius: 8px;
   border: none;
@@ -101,9 +104,20 @@ main {
 }
 
 textarea {
-  width: 80%;
+  width: 90%;
   height: 75px;
   border-radius: 8px;
   border: none;
   opacity: 30%;
+}
+
+.btn {
+  width: 90%;
+  padding: 8px 0;
+  background-color: rgb(255, 102, 0);
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 11px;
+  cursor: pointer;
 }
