--- a/style.css
+++ b/style.css
@@ -6,9 +6,7 @@
 
 body {
   font-family: "Open Sans", sans-serif;
-  background:
-    linear-gradient(to bottom, rgba(255, 64, 50, 0.8), rgba(71, 17, 116, 0.9)),
-    url(/bono-landing-page/images/background.jpg);
+  background: linear-gradient(to bottom, rgba(255, 64, 50, 0.8), rgba(71, 17, 116, 0.9)), url(/images/background.jpg);
   background-repeat: no-repeat;
   height: 100vh;
   background-position: center;
@@ -49,7 +47,7 @@ main {
 }
 
 .input-content-container form {
-  margin-left: 100px;
+  /* margin-left: 100px; */
 }
 
 .main-container {
@@ -62,7 +60,7 @@ main {
   flex: 1;
   width: auto;
   margin-top: -80px;
-  margin-right: 10rem;
+  margin-right: 8rem;
 }
 
 .main-header {
@@ -82,6 +80,7 @@ main {
   width: 100%;
   align-items: center;
   margin: 0 auto;
+  gap: 2rem;
 }
 
 .form-group {
