--- a/style.css
+++ b/style.css
@@ -46,10 +46,6 @@ main {
   flex: 2;
 }
 
-.input-content-container form {
-  /* margin-left: 100px; */
-}
-
 .main-container {
   max-width: 1200px;
   width: 50%;
@@ -66,12 +62,11 @@ main {
 .main-header {
   line-height: 40px;
   font-size: 35px;
-  width: 300px;
+  width: 320px;
 }
 
 .main-text-description {
-  font-size: 11px;
-  line-height: 1.1rem;
+  font-size: 13px;
   margin-top: 1rem;
 }
 
@@ -87,6 +82,13 @@ main {
   margin-bottom: 15px;
 }
 
+.form-group input,
+.form-group textarea {
+  background: rgba(255, 255, 255, 0.2);
+  color: white;
+  padding: 15px;
+}
+
 .form-group label {
   display: block;
   margin-bottom: 10px;
@@ -99,7 +101,6 @@ main {
   padding: 6px 0;
   border-radius: 8px;
   border: none;
-  opacity: 30%;
 }
 
 textarea {
@@ -107,7 +108,7 @@ textarea {
   height: 75px;
   border-radius: 8px;
   border: none;
-  opacity: 30%;
+  resize: none;
 }
 
 .btn {
